--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "config": "node installer.js"
+    "start": "nodemon app.js",
+    "config": "node app.js --install",
+    "reset": "node app.js --uninstall"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
